[tool.poetry]
name = "hannover_assessment"
description = "Technical Assessment for Hannover RE Data Scientist"
version = "0.1.0"
authors = [
    "Cillian Whelan <cillianwhelan@live.ie>"
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "2.1.0"
