[tool.poetry]
name = "prudential_life_insurance"
description = "Prudential Life Insurance Dataset Exploration"
version = "0.1.0"
authors = [
    "Cillian Whelan <cillianwhelan@live.ie>"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
reportlab = "^4.0.4"
ipykernel = "^6.25.1"
bokeh = "^3.2.2"
seaborn = "^0.12.2"
tabulate = "^0.9.0"
isort = "^5.12.0"
scikit-learn = "^1.3.0"
statsmodels = "^0.14.0"
xgboost = "^1.7.6"